@@ -31,7 +31,11 @@
         %span.label.label-danger paused
         \- runner will not receive any new build
 
-
+.append-bottom-20
+  = form_tag admin_runners_path, class: 'form-inline', method: :get do
+    .form-group
+      = search_field_tag :search, params[:search], class: 'form-control', placeholder: 'Runner description or token'
+    = submit_tag 'Search', class: 'btn'
 
 %table.table
   %thead
